--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "source-map-support": "^0.5.5"
   },
   "scripts": {
+    "build": "gulp transpile",
     "prepare": "gulp prepublish",
     "test": "gulp once",
     "watch": "gulp watch",
