--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "chai-as-promised": "^7.1.1",
     "gulp": "^4.0.0",
     "pre-commit": "^1.1.3",
-    "semantic-release": "^19.0.2",
+    "semantic-release": "^19.0.2"
   }
 }
