--- a/package.json
+++ b/package.json
@@ -56,11 +56,12 @@
     "precommit-test"
   ],
   "devDependencies": {
-    "@appium/gulp-plugins": "^6.0.0",
+    "@appium/gulp-plugins": "^7.0.0",
     "@appium/eslint-config-appium": "^6.0.0",
     "@semantic-release/git": "^10.0.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "eslint-config-prettier": "^8.5.0",
     "gulp": "^4.0.0",
     "pre-commit": "^1.1.3",
     "semantic-release": "^19.0.2"
