--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
     "pre-commit": "^1.1.3",
     "prettier": "^2.7.1",
     "semantic-release": "^19.0.2"
