Fix index transpile

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "build": "rm -rf build/lib/* && babel --out-dir=build/lib lib",
+    "build": "rm -rf build && babel --out-dir=build/lib lib && babel --out-dir=build index.js",
     "dev": "npm run build -- --watch",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
