--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "appium-ios-device",
-  "description": "Description goes here.",
+  "description": "Appium API for dealing with iOS devices",
   "keywords": [
     "appium"
   ],
   "version": "2.4.3",
-  "author": "appium",
+  "author": "Appium Contributors",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -14,9 +14,10 @@
   "bugs": {
     "url": "https://github.com/appium/appium-ios-device/issues"
   },
-  "engines": [
-    "node"
-  ],
+  "engines": {
+    "node": ">=14",
+    "npm": ">=8"
+  },
   "main": "./build/index.js",
   "bin": {},
   "directories": {
@@ -41,29 +42,50 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "build": "gulp transpile",
-    "prepare": "gulp prepublish",
-    "test": "gulp once",
-    "watch": "gulp watch",
-    "clean": "rm -rf node_modules && rm -f package-lock.json && npm install",
-    "lint": "gulp lint",
-    "lint:fix": "gulp eslint --fix",
+    "build": "rm -rf build && babel --out-dir=build/lib lib && babel --out-dir=build index.js",
+    "dev": "npm run build -- --watch",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "precommit-lint": "lint-staged",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
-    "precommit-test": "REPORTER=dot gulp once"
+    "prepare": "npm run build",
+    "test": "mocha --exit --timeout 1m \"./test/**/*-specs.js\""
   },
   "pre-commit": [
     "precommit-msg",
-    "precommit-test"
+    "precommit-lint"
   ],
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
+  "prettier": {
+    "bracketSpacing": false,
+    "printWidth": 100,
+    "singleQuote": true
+  },
   "devDependencies": {
-    "@appium/gulp-plugins": "^7.0.0",
     "@appium/eslint-config-appium": "^6.0.0",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/register": "^7.18.9",
     "@semantic-release/git": "^10.0.1",
+    "babel-plugin-source-map-support": "^2.2.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
-    "gulp": "^4.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
     "pre-commit": "^1.1.3",
+    "prettier": "^2.7.1",
     "semantic-release": "^19.0.2"
   }
 }
