--- a/.github/workflows/publish.js.yml
+++ b/.github/workflows/publish.js.yml
@@ -16,8 +16,10 @@ jobs:
         node-version: 18.x
     - run: npm install --no-package-lock
       name: Install dev dependencies
-    - run: npm test
-      name: Run NPM Test
+    - run: npm run build
+      name: Build
+    - run: npm run test
+      name: Unit Test
     - run: npx semantic-release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
