--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -17,6 +17,7 @@ jobs:
         echo ::set-output name=versions::${VERSIONS}
 
   test:
+    runs-on: ubuntu-latest
     needs:
     - prepare_matrix
     strategy:
