--- a/.releaserc
+++ b/.releaserc
@@ -4,16 +4,18 @@
       "preset": "angular",
       "releaseRules": [
         {"type": "chore", "release": "patch"}
-        
       ]
     }],
-    "@semantic-release/npm",
     "@semantic-release/release-notes-generator",
+    ["@semantic-release/changelog", {
+      "changelogFile": "CHANGELOG.md"
+    }],
+    "@semantic-release/npm",
     ["@semantic-release/git", {
-      "assets": ["docs", "package.json"],
+      "assets": ["docs", "package.json", "CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
-    "@semantic-release/github",
+    "@semantic-release/github"
   ]
 }
 
