--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "index.js",
     "lib",
     "build/index.js",
-    "build/lib"
+    "build/lib",
+    "CHANGELOG.md"
   ],
   "dependencies": {
     "@appium/support": "^2.55.3",
@@ -73,6 +74,7 @@
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/register": "^7.18.9",
+    "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "babel-plugin-source-map-support": "^2.2.0",
     "chai": "^4.1.2",
