--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,17 +7,9 @@ jobs:
     outputs:
       versions: ${{ steps.generate-matrix.outputs.versions }}
     steps:
-    - name: Generate Node.js versions matrix
+    - name: Select 3 most recent LTS versions of Node.js
       id: generate-matrix
-      run: |
-        sudo apt-get install -y lynx
-        lynx -dump https://endoflife.date/nodejs | grep -E -o '[0-9]+[( a-zA-Z]+LTS\)' | grep -E -o '([0-9]+)' > eol.list
-        cat eol.list
-        lts1=$(cat eol.list | head -1)
-        lts2=$(cat eol.list | head -2 | tail -1)
-        lts3=$(cat eol.list | head -3 | tail -1)
-        VERSIONS="[$lts1, $lts2, $lts3]"
-        echo "versions=${VERSIONS}" >> "$GITHUB_OUTPUT"
+      run: echo "versions=$(curl -s https://endoflife.date/api/nodejs.json | jq -c '[[.[] | select(.lts != false)][:3] | .[].cycle | tonumber]')" >> "$GITHUB_OUTPUT"
 
   test:
     runs-on: ubuntu-latest
@@ -33,9 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dev dependencies
-        run: |
-          npm install -g npm
-          npm install
+        run: npm install
       - name: Run linter
         run: npm run lint
       - name: Run unit tests
