--- a/package.json
+++ b/package.json
@@ -99,6 +99,6 @@
     "prettier": "^3.0.0",
     "semantic-release": "^22.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "~5.2"
   }
 }
