--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@appium/support": "^4.0.0",
     "asyncbox": "^3.0.0",
+    "axios": "^1.6.7",
     "bluebird": "^3.1.1",
     "bplist-creator": "^0.x",
     "bplist-parser": "^0.x",
