--- a/package.json
+++ b/package.json
@@ -100,6 +100,6 @@
     "prettier": "^3.0.0",
     "semantic-release": "^23.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.2"
+    "typescript": "^5.4.2"
   }
 }
