--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "bplist-parser": "^0.x",
     "lodash": "^4.17.15",
     "semver": "^7.0.0",
-    "source-map-support": "^0.x",
-    "uuid": "^11.0.1"
+    "source-map-support": "^0.x"
   },
   "scripts": {
     "build": "tsc -b",
